# fargo-rs

./: Cargo.toml
src/: cli.rs  graph.rs  main.rs  parser.rs
