[package]
name = "fargo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9.4"
memchr = "2.7.2"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip=true
panic = 'abort'

[profile.perf-debug]
inherits = "release"
debug = true
lto = true
strip=false
panic = 'abort'